<resources>
    <string name="app_name">IntentsInAndroid</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="this_is_next_activity">This is Next Activity</string>
    <string name="todo">TODO</string>
    <string name="william_faulkner">William Faulkner</string>
    <string name="life_changing_quote">Life Changing Quote</string>
    <string name="quote">“Never be afraid to raise your voice for honesty and truth and compassion against injustice and lying and greed. If people all over the world...would do this, it would change the earth.”</string>
    <string name="share_quote">SHARE QUOTE</string>
    <string name="implicit_intent">Implicit Intent</string>
</resources>